# Nimbly-API

./: README.md  pyproject.toml  readme.md
app/: database.py  deps.py  main.py
app/api/v1/routes/: auth.py  instance.py
app/models/: auth_model.py  ec2.py
app/schemas/: auth_request.py
app/services/: auth.py  manager.py
tests/: test_ec2_live.py
